--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,12 @@ dependencies:
   # Serializable
   json_serializable:     
 
+  # animations
+  lottie: ^2.7.0
+
+  # Calendar
+  syncfusion_flutter_calendar: ^23.1.41
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
