animation and network intgeration done...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
 
   # Network
   dio: 
+  dio_cache_interceptor: ^3.2.7
+  dio_cache_interceptor_hive_store: ^3.1.1
+  freezed_annotation: ^2.0.3
+  json_annotation: ^4.5.0
+  path_provider: ^2.0.10
 
   # Serializable
   json_serializable:     
@@ -60,6 +65,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +78,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner:
+  freezed: ^2.0.3+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -85,6 +92,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/lang/
+    - assets/animations/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
