--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,18 @@ dependencies:
 
 
   # Localization 
-  easy_localization: 
+  easy_localization:
+
+  #Image
+  flutter_svg: ^2.0.8
+
+  #rating bar:
+  flutter_rating_bar: ^4.0.1
+
 
   # Cache
   shared_preferences: ^2.0.17
+  cached_network_image: ^3.3.0
 
   # Network
   dio: 
@@ -93,6 +101,8 @@ flutter:
   assets:
     - assets/lang/
     - assets/animations/
+    - assets/icons/
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
