--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,11 +69,17 @@ dependencies:
   # Calendar
   syncfusion_flutter_calendar: ^23.1.41
 
+  # storage
+  flutter_secure_storage: ^5.0.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   async: ^2.11.0
+  another_flushbar: ^1.12.30
+  intl: ^0.18.1
+  hooks_riverpod: ^2.0.0-dev.7
 
 dev_dependencies:
   flutter_test:
