--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   another_flushbar: ^1.12.30
   intl: ^0.18.1
   hooks_riverpod: ^2.0.0-dev.7
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
