--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dependencies:
   intl: ^0.18.1
   hooks_riverpod: ^2.0.0-dev.7
   form_field_validator: ^1.1.0
+  syncfusion_flutter_sliders: ^23.1.43
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
