--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,7 +109,10 @@ flutter:
     - assets/animations/
     - assets/icons/
     - assets/images/
-
+  fonts:
+    - family: "OpenSans"
+      fonts:  
+        - asset: assets/fonts/OpenSans-Italic.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
