--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,9 @@ dependencies:
   form_field_validator: ^1.1.0
   syncfusion_flutter_sliders: ^23.1.43
   dotted_border: ^2.1.0
+  flutter_switch: ^0.3.2
+  country_picker: ^2.0.22
+  country_code_picker: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -114,8 +117,19 @@ flutter:
     - assets/images/
   fonts:
     - family: "OpenSans"
-      fonts:  
-        - asset: assets/fonts/OpenSans-Italic.ttf
+      fonts:
+        - asset: assets/fonts/OpenSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/OpenSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/OpenSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/OpenSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/OpenSans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/OpenSans-ExtraBold.ttf
+          weight: 800
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
