--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
 
   #charts:
   syncfusion_flutter_charts: ^23.1.43
+  syncfusion_flutter_pdf: ^23.1.43
+
   #UI responsive:
   responsive_sizer: ^3.1.1
 
@@ -72,15 +74,9 @@ dependencies:
 
   # Calendar
   syncfusion_flutter_calendar: ^23.1.41
-  syncfusion_flutter_charts:
 
   # storage
   flutter_secure_storage: ^5.0.2
-
-  # Responsive Sizer
-  responsive_sizer:
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
