--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,7 @@ dependencies:
   syncfusion_flutter_calendar: ^23.1.41
 
   # storage
-  flutter_secure_storage: ^5.0.2
+  flutter_secure_storage: ^9.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -94,7 +94,10 @@ dependencies:
   flutter_switch: ^0.3.2
   country_picker: ^2.0.22
   country_code_picker: ^3.0.0
-  flutter_share: ^2.0.0
+  share_plus: ^7.2.1
+  pdf: ^3.5.0
+  file_picker: ^6.1.1
+  calendar_date_picker2: ^0.5.3
 
 dev_dependencies:
   flutter_test:
