--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,4 +64,11 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+configurations {
+    all*.exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
+    all*.exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+}
