--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,8 @@ dependencies:
   dio: 
   dio_cache_interceptor: ^3.2.7
   dio_cache_interceptor_hive_store: ^3.1.1
-  freezed_annotation: ^2.0.3
-  json_annotation: ^4.5.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
   path_provider: ^2.0.10
 
   # Serializable
@@ -109,8 +109,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner:
-  freezed: ^2.0.3+1
+  build_runner: ^2.4.6
+  freezed: ^2.4.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
