--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,9 @@ dependencies:
   pdf: ^3.5.0
   file_picker: ^6.1.1
   calendar_date_picker2: ^0.5.3
+  dartz: ^0.10.1
+  encrypt: ^5.0.3
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
@@ -111,6 +114,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner:
   freezed: ^2.0.3+1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
