--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ dependencies:
   pdf: ^3.5.0
   file_picker: ^6.1.1
   calendar_date_picker2: ^0.5.3
+  flutter_easyloading:
 
 dev_dependencies:
   flutter_test:
