--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,12 @@ dependencies:
   cached_network_image: ^3.3.0
 
   #Slide
-  flutter_slidable: ^3.0.1
+  flutter_slidable:
+    path: ./flutter_slidable-3.0.1
+
+  #chat Bubble
+  flutter_chat_bubble: ^2.0.2
+  grouped_list: ^5.1.2
 
   # Network
   dio: 
@@ -105,7 +110,6 @@ dependencies:
   file_picker: ^6.1.1
   calendar_date_picker2: ^0.5.3
   flutter_easyloading:
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
