--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,10 @@ dependencies:
   #chat Bubble
   flutter_chat_bubble: ^2.0.2
   grouped_list: ^5.1.2
+  swipe_to: ^1.0.4
+
+  #image_pick
+  image_picker: ^1.0.4
 
   # Network
   dio: 
