--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,7 @@ dependencies:
   image_cropper: ^5.0.1
   permission_handler: any
   nested: ^1.0.0
+  mask_text_input_formatter: ^2.7.0
 
   # Range slider
   flutter_xlider: ^3.5.0
