--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # State Management
   mobx: ^2.1.3+1
@@ -45,7 +47,6 @@ dependencies:
   #getex
   get: ^4.6.6
   get_storage: ^2.1.1
-  country_code_picker: ^3.0.0
 
   #rating bar:
   flutter_rating_bar: ^4.0.1
