--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -12,6 +12,8 @@
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
+		<key>NSFaceIDUsageDescription</key>
+        <string>App required face id to login app?</string>
 		<key>CFBundleName</key>
 		<string>hessah</string>
 		<key>CFBundlePackageType</key>
