--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,8 @@ dependencies:
   permission_handler: any
   nested: ^1.0.0
   mask_text_input_formatter: ^2.7.0
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
 
   # Range slider
   flutter_xlider: ^3.5.0
