--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,9 @@ dependencies:
     sdk: flutter
 
   # State Management
-  mobx: ^2.1.3+1
-  flutter_mobx: ^2.0.6+5 
-  mobx_codegen: 
+#  mobx: ^2.1.3+1
+#  flutter_mobx: ^2.0.6+5
+#  mobx_codegen:
 
   #Image
   flutter_svg: ^2.0.8
