--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ dependencies:
   mask_text_input_formatter: ^2.7.0
   geolocator: ^10.1.0
   geocoding: ^2.1.1
+  pdf_viewer_plugin: ^2.0.1
 
   # Range slider
   flutter_xlider: ^3.5.0
