--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,9 @@ dependencies:
   pdf_viewer_plugin: ^2.0.1
   easy_debounce: ^2.0.3
 
+  # message pligin
+  mirrorfly_plugin: ^0.0.12
+
   # Range slider
   flutter_xlider: ^3.5.0
   flutter_native_splash: ^2.3.7
