--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,7 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   pdf_viewer_plugin: ^2.0.1
+  easy_debounce: ^2.0.3
 
   # Range slider
   flutter_xlider: ^3.5.0
