icons added to the project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,7 @@ dependencies:
   flutter_native_splash: ^2.3.7
   local_auth_android: ^1.0.36
   local_auth_ios: ^1.1.5
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -202,6 +203,30 @@ analyzer:
   strong-mode: true
   language:
     enableSuperMixins: true
+flutter_launcher_icons:
+  #  image_path: "assets/images/icon-128x128.png"
+  image_path_android: "assets/images/logo-android.png"
+  image_path_ios: "assets/images/logo-ios.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  adaptive_icon_background: "assets/images/bg.png" # only available for Android 8.0 devices and above
+  adaptive_icon_foreground: "assets/images/logo-android.png" # only available for Android 8.0 devices and above
+  adaptive_icon_monochrome: "assets/images/logo-android.png" # only available for Android 13 devices and above
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+  background_color_ios: "#0xFF002BC7"
+  web:
+    generate: true
+    image_path: "assets/images/logo-ios.png"
+    background_color: "#0xFF002BC7"
+    theme_color: "#0xFF002BC7"
+  windows:
+    generate: true
+    image_path: "assets/images/logo-ios.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/logo-ios.png"
 flutter_native_splash:
   # This package generates native code to customize Flutter's default white native splash screen
   # with background color and splash image.
