--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,6 +127,8 @@ dependencies:
   local_auth_android: ^1.0.36
   local_auth_ios: ^1.1.5
   flutter_launcher_icons: ^0.13.1
+  mime: ^1.0.5
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
