--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -131,6 +131,8 @@ dependencies:
   mime: ^1.0.5
   http_parser: ^4.0.2
   flutter_native_contact_picker: ^0.0.6
+  carousel_slider: ^4.2.1
+  dots_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
